@@ -106,45 +106,6 @@ linkend="function-gdk--device-get-core-pointer">gtk.gdk.device_get_core_pointer<
 	  <tbody>
 
 	    <row valign="top">
-	      <entry>"name"</entry>
-	      <entry>Read</entry>
-	      <entry>the name of this device.</entry>
-	    </row>
-
-	    <row valign="top">
-	      <entry>"source"</entry>
-	      <entry>Read</entry>
-	      <entry>the type of this device - one of:
-<literal>gtk.gdk.SOURCE_MOUSE</literal>,
-<literal>gtk.gdk.SOURCE_PEN</literal>,
-<literal>gtk.gdk.SOURCE_ERASER</literal>,
-<literal>gtk.gdk.SOURCE_CURSOR</literal></entry>
-	    </row>
-
-	    <row valign="top">
-	      <entry>"mode"</entry>
-	      <entry>Read</entry>
-	      <entry>the mode of this device - one of:
-<literal>gtk.gdk.MODE_DISABLED</literal>,
-<literal>gtk.gdk.MODE_SCREEN</literal>,
-<literal>gtk.gdk.MODE_WINDOW</literal></entry>
-	    </row>
-
-	    <row valign="top">
-	      <entry>"has_cursor"</entry>
-	      <entry>Read</entry>
-	      <entry>if <literal>TRUE</literal> the pointer follows device
-motion.</entry>
-	    </row>
-
-	    <row valign="top">
-	      <entry>"num_axes"</entry>
-	      <entry>Read</entry>
-	      <entry>the length of the <literal>axes</literal>
-tuple.</entry>
-	    </row>
-
-	    <row valign="top">
 	      <entry>"axes"</entry>
 	      <entry>Read</entry>
 	      <entry>a tuple containing axes information. Each axes is
@@ -159,9 +120,10 @@ values.</entry>
 	    </row>
 
 	    <row valign="top">
-	      <entry>"num_keys"</entry>
+	      <entry>"has_cursor"</entry>
 	      <entry>Read</entry>
-	      <entry>the length of the <literal>keys</literal> tuple</entry>
+	      <entry>if <literal>TRUE</literal> the pointer follows device
+motion.</entry>
 	    </row>
 
 	    <row valign="top">
@@ -170,6 +132,44 @@ values.</entry>
 	      <entry>a tuple describing the mapped macro buttons. Each macro
 button is described by a tuple containing: a key value output when the macro
 button is pressed and a set of modifiers output with the key value.</entry>
+	    </row>
+
+	    <row valign="top">
+	      <entry>"mode"</entry>
+	      <entry>Read</entry>
+	      <entry>the mode of this device - one of:
+<literal>gtk.gdk.MODE_DISABLED</literal>,
+<literal>gtk.gdk.MODE_SCREEN</literal>,
+<literal>gtk.gdk.MODE_WINDOW</literal></entry>
+	    </row>
+
+	    <row valign="top">
+	      <entry>"name"</entry>
+	      <entry>Read</entry>
+	      <entry>the name of this device.</entry>
+	    </row>
+
+	    <row valign="top">
+	      <entry>"num_axes"</entry>
+	      <entry>Read</entry>
+	      <entry>the length of the <literal>axes</literal>
+tuple.</entry>
+	    </row>
+
+	    <row valign="top">
+	      <entry>"num_keys"</entry>
+	      <entry>Read</entry>
+	      <entry>the length of the <literal>keys</literal> tuple</entry>
+	    </row>
+
+	    <row valign="top">
+	      <entry>"source"</entry>
+	      <entry>Read</entry>
+	      <entry>the type of this device - one of:
+<literal>gtk.gdk.SOURCE_MOUSE</literal>,
+<literal>gtk.gdk.SOURCE_PEN</literal>,
+<literal>gtk.gdk.SOURCE_ERASER</literal>,
+<literal>gtk.gdk.SOURCE_CURSOR</literal></entry>
 	    </row>
 
 	</tbody>
