@@ -16,6 +16,8 @@
 	PyGTK 2.2 method.
 	Add descriptions of 2 more constructor signatures for PyGTK 2.4.
 
+	* pygtk-gdkdevice.xml Reorder attribute list.
+
 2004-04-19  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeview.xml (expand_to_path) (map_expanded_rows)
